[package]
name = "logo-test"
version = "0.1.0"
authors = ["Kunal Mehta <legoktm@member.fsf.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c24f15c18f02319" }
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket", rev = "c24f15c18f02319", default-features = false, features = ["json", "tera_templates"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2"
regex = "1"
anyhow = "1.0.31"
reqwest = {version = "0.11", features = ["gzip", "json"]}
toolforge = {version = "0.2.1", features = ["mysql"]}
mysql = "20"
#rocket_healthz = "0.1.0"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
