[package]
name = "logo-test"
version = "0.1.0"
authors = ["Kunal Mehta <legoktm@debian.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["tera"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2"
regex = "1"
lazy_static = "1"
anyhow = "1.0.31"
reqwest = {version = "0.11", features = ["gzip", "json"]}
toolforge = {version = "5.0", features = ["mysql"]}
mysql_async = "0.29"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
